// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard component matches snapshot with custom props 1`] = `
<Adapter>
  <Adapter>
    <Connect(WithFormik(Search)) />
    <div
      className="top-margin"
    >
      <List
        currentPage={0}
        emptyListTxt="No movies found"
        error=""
        list={
          Array [
            Object {
              "id": 1,
              "overview": "Decades after Sarah Connor prevented Judgment Day.",
              "poster_path": "/vqzNJRH4YyquRiWxCCOH0aXggHI.jpg",
              "title": "Terminator: Dark Fate",
            },
          ]
        }
        loading={false}
        onPaginationClick={[MockFunction]}
        totalItems={0}
      />
    </div>
  </Adapter>
</Adapter>
`;

exports[`Dashboard component matches snapshot with required props 1`] = `
<Adapter>
  <Adapter>
    <Connect(WithFormik(Search)) />
    <div
      className="top-margin"
    >
      <List
        currentPage={0}
        emptyListTxt="No movies found"
        error=""
        list={null}
        loading={false}
        onPaginationClick={[MockFunction]}
        totalItems={0}
      />
    </div>
  </Adapter>
</Adapter>
`;
